// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.andi.nms.sys.rpc.client";
option java_outer_classname = "Client";
option objc_class_prefix = "CLT";

import public "server/nmsServer.proto";

package client;



// The NmsClient definition.
service NmsClient {
  // Sends a network
  rpc sendNetWork (NetWork) returns (server.Ack) {}

  rpc sendDevice (Device)  returns (server.Ack) {}
}

// The request message containing the NetWork's all info.
message NetWork {
  int32 id = 1;
  int32 netWorkModel = 2;
  int32 alohaModel = 3;
  IpAddr ipAddr = 4;
  string name = 5;
}

message IpAddr{
  int32 ip = 1;
  int32 mask = 2;
  string ifName = 3;//
}

message Device{
  int32 devId = 1;
  int32 devName = 2;
}